deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: expreportdemo-ms-agents
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expreportdemo-ms-agents
  template:
    metadata:
      labels:
        app: expreportdemo-ms-agents
    spec:
      containers:
        - name: expreportdemo-ms-agents
          image: expreportdemo-ms-agents:latest
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
---
kind: Service
apiVersion: v1
metadata:
  name: expreportdemo-ms-agents
  labels:
    app: expensereportdemo-ms-agents
    app.kubernetes.io/component: expensereportdemo-ms-agents
    app.kubernetes.io/instance: expensereportdemo-ms-agents
    app.kubernetes.io/name: expensereportdemo-ms-agents
    app.kubernetes.io/part-of: expensereportdemo-app
    app.openshift.io/runtime: expensereportdemo-ms-agents
  annotation:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/jcarlosmolina/expreportdemo_ms_agents.git'
    isFromDevfile: 'true'
spec:
  ports:
    - name: http-8081
      port: 8081
      protocol: TCP
      targetPort: 8081
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  sesssionAffinity: None
  selector:
    app: expreportdemo-ms-agents
    deployment: expreportdemo-ms-agents
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: expreportdemo-ms-agents
  labels:
    app: expreportdemo-ms-agents
    app.kubernetes.io/component: expreportdemo-ms-agents
    app.kubernetes.io/instance: expreportdemo-ms-agents
    app.kubernetes.io/name: expreportdemo-ms-agents
    app.kubernetes.io/part-of: expensereportdemo-app
    app.openshift.io/runtime: expreportdemo-ms-agents
  annotations:
    isFromDevFile: 'true'
spec:
  host: expreportdemo-ms-agents-jcmintegranova-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  to:
    kind: Service
    name: expreportdemo-ms-agents
    weight: 100
  port:
    targetPort: '8081'
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
